--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "next": "^15.2.1",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
