--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^15.2.1",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "pino": "^9.6.0",
     "postcss": "^8.5.3",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
