--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cm6-theme-basic-dark": "^0.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
+    "pino-pretty": "^13.0.0",
     "tailwindcss": "^4.0.12",
     "typescript": "^5"
   }
