--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
     "mongodb": "^6.14.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.13.0",
     "next": "^15.2.1",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
