--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@mdxeditor/editor": "^3.27.0",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -23,7 +24,7 @@
     "mongoose": "^8.13.0",
     "next": "^15.2.1",
     "next-auth": "^5.0.0-beta.25",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "pino": "^9.6.0",
     "postcss": "^8.5.3",
     "query-string": "^9.1.1",
@@ -31,7 +32,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "slugify": "^1.6.6",
-    "sonner": "^2.0.1",
+    "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
@@ -40,6 +41,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.12",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
