--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "bcryptjs": "^3.0.2",
+    "bright": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "he": "^1.2.0",
     "lucide-react": "^0.479.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.13.0",
-    "next": "^15.2.1",
+    "next": "^15.1.7",
     "next-auth": "^5.0.0-beta.25",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "pino": "^9.6.0",
     "postcss": "^8.5.3",
