--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.10",
     "@hookform/resolvers": "^4.1.3",
     "@mdxeditor/editor": "^3.29.3",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -16,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "ai": "^4.3.4",
     "bcryptjs": "^3.0.2",
     "bright": "^1.0.0",
     "class-variance-authority": "^0.7.1",
