--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^0.2.9",
     "@ai-sdk/openai": "^1.3.10",
     "@hookform/resolvers": "^4.1.3",
     "@mdxeditor/editor": "^3.29.3",
+    "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
