Profile Link UPD

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bright": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "he": "^1.2.0",
     "lucide-react": "^0.479.0",
     "mongodb": "^6.14.2",
